# stark-t2s-agent

./: .example.env  .gitignore  README.md  docker-compose.yml  flake.nix  pyproject.toml
paper_report/: paper.typ  refs.bib
scripts/: analyze_benchmark.py  build_prime_stores.py  demo_chat.py
src/stark_prime_t2s/: __init__.py  config.py
src/stark_prime_t2s/agent/: __init__.py  agent.py
src/stark_prime_t2s/benchmark/: __init__.py  analyze_local_runs.py  report_template.html  run_prime.py
src/stark_prime_t2s/dataset/: __init__.py  download_prime.py  parse_prime_processed.py
src/stark_prime_t2s/materialize/: __init__.py  fuseki_prime.py  postgres_prime.py
src/stark_prime_t2s/scripts/: __init__.py  build_stores.py  demo_chat.py
src/stark_prime_t2s/tools/: __init__.py  entity_resolver.py  execute_query.py
